# news-extractor

./: Cargo.toml  README.md
extractor-server/: Cargo.toml
extractor-server/src/: main.rs  parser.rs  render.rs  server.rs
html-dom/: Cargo.toml
html-dom/src/: document.rs  iterator.rs  lib.rs  node.rs  parser.rs
news-extractor/: Cargo.toml
news-extractor/src/: lib.rs  parser.rs
render-dom/: Cargo.toml
render-dom/src/: dom.rs  lib.rs  style.rs
