[package]
name = "extractor-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

news-extractor = { path = "../news-extractor" }
clap = { version = "3.1.8", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
